[package]
name = "nix-hash"
version = "0.1.0"
edition = "2024"
description = "Pure Rust implementation of Nix store path hashing (nix32, hash compression, SRI)"
license = "EUPL-1.2"
repository = "https://github.com/notashelf/nix-hash"

[dependencies]
base64 = "0.22.1"
blake3 = "1.8.5"
md-5 = "0.11.0"
sha1 = "0.11.0"
sha2 = "0.11.0"

[dev-dependencies]
hex = "0.4.3"
